--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,11 +1,11 @@
 body {
-
+    background: #1e1f24;
     color: #333;
-
-
     text-align: center;
     font-size: 16px;
     font-family:Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 #container{
     width: 70%;
@@ -15,12 +15,16 @@ body {
     margin: 0 auto;
 }
    #cabecera{
-       background: #33a;
+       background: #37488b;
         margin: 0;
         padding: 0.5em;
-        box-shadow: 0px 5px 30px 0px rgba(0, 0,0, 0.5);
+        box-shadow: 0px 2px 20px 0px rgba(0, 0,0, 0.5);
         font-weight: bold;
         color: white;
+   }
+   #cabecera #logo{
+       width: 20px;
+       vertical-align: middle;
    }
    #cabecera #tagline{
         padding: 0 0 0 1em;
@@ -30,4 +34,8 @@ body {
 #container h1 {
   font-size: 20px;
 
+}
+#post{
+    background: white;
+    padding: 1em;
 }
